--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "pagnination",
+ "homepage":"https://mkhaleddd.github.io/pagination/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "build": "vite build",
     "preview": "vite preview"
   },
